# pythonStudy

./: .gitignore  README.md
hw/src/: def.py  dict.py  updownURL.py
hw/src/crawler/: alba_crawler.py  bs.py
hw/src/crawler/hacker_news/: main.py
hw/src/crawler/hacker_news/templates/: index.html
hw/src/crawler/reddit/: main.py  pyproject.toml
hw/src/crawler/reddit/templates/: add.html  home.html
hw/src/crawling/: bs.py
practice/crawler00/: main.py  pyproject.toml
practice/crawler00/templates/: home.html  result.html
practice/crawler01/: README.md
practice/crawler01/src/: main.py  pyproject.toml
practice/food_crawler/: main.py
practice/food_crawler/templates/: home.html
