[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "mediumpurplespiritedlegacysystem"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.7"
Flask = "^1.1"
beautifulsoup4 = "^4.9"
[tool.poetry.dev-dependencies]
